# athena

./: .editorconfig  README.md  default_tests.yml  example_config.yml  pyproject.toml
.github/prompts/: weak-points.md
examples/: PLUGIN_README.md  example_test_config.yml  plugin_example.py  pyproject.toml.example  setup.py.example
src/athena/: cli.py  interfaces.py  models.py  service.py  strategies.py  types.py
src/athena/managers/: configuration_manager.py  report_manager.py  test_manager.py
src/athena/models/: __init__.py  athena_test_suite_config.py  data_parser_plugin.py  plugin.py  plugin_metadata.py  reporter_config.py  reporter_plugin.py  test_config.py  test_details.py  test_failed_result.py  test_passed_result.py  test_plugin.py  test_result.py  test_result_summary.py  test_skipped_result.py  test_suite_config.py  test_suite_summary.py
src/athena/plugins/: __init__.py  base.py  console_reporter.py  data_parser_plugins_manager.py  hookspecs.py  json_plugin.py  plugin_manager.py  report_plugins_manager.py  system_test.py  test_plugins_manager.py  yaml_plugin.py
src/athena/protocols/: config_parser_service_protocol.py  data_parser_plugins_manager_protocol.py  data_parser_protocol.py  data_parser_service_protocol.py  plugin_manager_protocol.py  plugin_service_protocol.py  plugins_manager_protocol.py  report_plugins_manager_protocol.py  report_service_protocol.py  reporter_protocol.py  test_plugins_manager_protocol.py  test_runner_protocol.py  test_service_protocol.py
src/athena/services/: athena_test_service.py  config_parser_service.py  (+5 more)
(+12 files in other folders)
